glib: chain up finalize to the parent class

This was missing in some of the classes.

https://bugs.freedesktop.org/show_bug.cgi?id=55521